--- a/index.ipynb
+++ b/index.ipynb
@@ -344,10 +344,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def return_full_name():\n",
@@ -374,7 +372,7 @@
     }
    ],
    "source": [
-    "return_full_name()"
+    "return_full_name.()"
    ]
   },
   {
