--- a/index.ipynb
+++ b/index.ipynb
@@ -352,28 +352,27 @@
     "    first_name = 'bob'\n",
     "    last_name = 'smith'\n",
     "    full_name = first_name + ' ' + last_name\n",
-    "    return full_name"
+    "    return full_name.title"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'function' object has no attribute 'title'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-c0f44af151e0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mreturn_full_name\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtitle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'function' object has no attribute 'title'"
-     ]
+     "data": {
+      "text/plain": [
+       "'bob smith'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "return_full_name.title()"
+    "return_full_name()"
    ]
   },
   {
